crates/analyzer/tests/snapshots/errors__duplicate_var_in_contract_method.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate definition of variable `foo`
  ┌─ compile_errors/duplicate_var_in_contract_method.fe:3:13
  │
3 │         let foo: u8
  │             ^^^ `foo` first defined here
4 │         let foo: u8
  │             --- `foo` redefined here


